--- a/css/style.css
+++ b/css/style.css
@@ -34,19 +34,24 @@
   border: 3px solid #eaeaea;
 }
 
-.loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
-  border-radius: 50%;
+.loader{
+    display: block;
+  margin: 0 auto;
   width: 120px;
   height: 120px;
-  animation: spin 2s linear infinite;
   margin: 100px auto;
 }
 
+.loader img{
+  width: 120px;
+  display: block;
+  margin: 0 auto;
+  animation: spin 2s infinite linear ;
+}
+
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% { transform: rotate(0); }
+  100% { transform: rotate(1turn); }
 }
 
 #container{
