--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@
   display: none;
 }
 
+
+.locked{
+  background-color: #bbb;
+}
 body {
   background-color: rgb(233, 233, 233);
 }
@@ -650,7 +654,7 @@ footer .conteudo1 {
 }
 
 footer .conteudo2 {
-  padding: 1;
+  padding:1;
   width: 450px;
   margin-bottom: 20px;
 }
